--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@babel/runtime": "^7.24.7",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^9.1.3",
+    "css-loader": "^7.1.2",
+    "style-loader": "^4.0.0",
     "webpack": "^5.92.1",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4"
